# shared-ringbuffer

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build_macos.sh  build_windows.bat  rebuild.sh
include/: SharedRingBuffer.hpp  SharedRingBufferHeader.hpp  SharedRingBufferReader.hpp  SharedRingBufferWriter.hpp
src/: circular_reader_test.cpp  circular_writer_test.cpp  cleanup.cpp  main.cpp  reader.cpp  ringbuffer_read_test.cpp  ringbuffer_reader.cpp  ringbuffer_to_wav.cpp  ringbuffer_write_test.cpp  sharedBuffer.cpp
